--- a/fronteend/package.json
+++ b/fronteend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fronteend",
   "version": "0.1.0",
-  "private": true,
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
