--- a/backeend/package.json
+++ b/backeend/package.json
@@ -18,5 +18,8 @@
     "lucide-react": "^0.468.0",
     "mongoose": "^8.8.4",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
