--- a/fronteend/package.json
+++ b/fronteend/package.json
@@ -11,7 +11,10 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "fs-extra": "^11.2.0",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
@@ -19,7 +22,10 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "static-eval": "^2.1.1",
+    "tryer": "^1.0.1",
+    "web-vitals": "^2.1.0",
+    "webpack-manifest-plugin": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +50,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^8.4.1",
+    "loader-utils": "^2.0.4",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^4.10.0"
   }
 }
