--- a/fronteend/package.json
+++ b/fronteend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "cra-template": "1.2.0",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "fs-extra": "^11.2.0",
